# liz_pr

./: CMakeLists.txt
main/: Makefile  function.h  functional.cpp  hello.cpp  main.cpp
requirments/: req
